k8s/gateway-service/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  namespace: notes-backend
  labels:
    app: gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: notes-backend/gateway-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: '300Mi'
              cpu: '200m'
            limits:
              memory: '400Mi'
