k8s/gateway-service/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: notes-backend
spec:
  selector:
    app: gateway-service
  type: NodePort
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 30011
