k8s/gateway-service/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: notes-backend
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  defaultBackend:
    service:
      name: gateway-service
      port:
        name: http
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  name: http
